Bug 319334 - Drag & Drop from the Layer Box of one Krita instance to the Layer Box of another instance doesn't work
Summary: Drag & Drop from the Layer Box of one Krita instance to the Layer Box of anot...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-04 19:09 UTC by Dmitry Kazakov
Modified: 2013-05-17 07:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2013-05-04 19:09:59 UTC
When trying to drop a layer there, it just "regrabs" a layer from the local Layer Box.
Comment 1 Dmitry Kazakov 2013-05-04 19:14:06 UTC
At the same time, Drag & Drop of layers between different images, opened in *the same* Krita instance works fine.
Comment 2 Dmitry Kazakov 2013-05-06 16:33:29 UTC
Git commit 21d060e2ec0d897aa18a8c41aa24a232c7c257d5 by Dmitry Kazakov.
Committed on 06/05/2013 at 07:19.
Pushed by dkazakov into branch 'krita-testing-kazakov'.

Fixed a cross-Krita instance Drag&Drop to the Layer Box

This patch effectively workarounds some bug in Qt that causes
mouse events come to the tree view while something is dragged over
the view (this, probably, happens due to the order of event filters).
These mouse events cause a new drag to start, which results is a very
weird behavior.

M  +5    -4    krita/plugins/extensions/dockers/defaultdockers/kis_layer_box.cpp
M  +84   -0    krita/ui/kis_mimedata.cpp
M  +20   -0    krita/ui/kis_mimedata.h
M  +30   -5    krita/ui/kis_node_model.cpp
M  +2    -1    krita/ui/kis_node_model.h
M  +9    -55   krita/ui/kis_view2.cpp
M  +2    -2    krita/ui/tests/kis_model_index_converter_test.cpp
M  +5    -5    krita/ui/tests/kis_node_model_test.cpp
M  +42   -2    libs/main/KoDocumentSectionView.cpp
M  +2    -0    libs/main/KoDocumentSectionView.h

http://commits.kde.org/calligra/21d060e2ec0d897aa18a8c41aa24a232c7c257d5
Comment 3 Dmitry Kazakov 2013-05-08 18:08:38 UTC
Git commit f84700bdc74b275d45a172c39d24687f3ddf2a74 by Dmitry Kazakov.
Committed on 06/05/2013 at 07:19.
Pushed by dkazakov into branch 'calligra/2.7'.

Fixed a cross-Krita instance Drag&Drop to the Layer Box

This patch effectively workarounds some bug in Qt that causes
mouse events come to the tree view while something is dragged over
the view (this, probably, happens due to the order of event filters).
These mouse events cause a new drag to start, which results is a very
weird behavior.

M  +5    -4    krita/plugins/extensions/dockers/defaultdockers/kis_layer_box.cpp
M  +84   -0    krita/ui/kis_mimedata.cpp
M  +20   -0    krita/ui/kis_mimedata.h
M  +30   -5    krita/ui/kis_node_model.cpp
M  +2    -1    krita/ui/kis_node_model.h
M  +9    -55   krita/ui/kis_view2.cpp
M  +2    -2    krita/ui/tests/kis_model_index_converter_test.cpp
M  +5    -5    krita/ui/tests/kis_node_model_test.cpp
M  +42   -2    libs/main/KoDocumentSectionView.cpp
M  +2    -0    libs/main/KoDocumentSectionView.h

http://commits.kde.org/calligra/f84700bdc74b275d45a172c39d24687f3ddf2a74
Comment 4 Siddharth 2013-05-17 07:15:34 UTC
Git commit 9d454800f23b9fb5436a0380a7294a8e447a35a5 by Siddharth Sharma, on behalf of Dmitry Kazakov.
Committed on 06/05/2013 at 07:19.
Pushed by siddharthsharma into branch 'krita-psd-plugin-siddharth'.

Fixed a cross-Krita instance Drag&Drop to the Layer Box

This patch effectively workarounds some bug in Qt that causes
mouse events come to the tree view while something is dragged over
the view (this, probably, happens due to the order of event filters).
These mouse events cause a new drag to start, which results is a very
weird behavior.

M  +5    -4    krita/plugins/extensions/dockers/defaultdockers/kis_layer_box.cpp
M  +84   -0    krita/ui/kis_mimedata.cpp
M  +20   -0    krita/ui/kis_mimedata.h
M  +30   -5    krita/ui/kis_node_model.cpp
M  +2    -1    krita/ui/kis_node_model.h
M  +9    -55   krita/ui/kis_view2.cpp
M  +2    -2    krita/ui/tests/kis_model_index_converter_test.cpp
M  +5    -5    krita/ui/tests/kis_node_model_test.cpp
M  +42   -2    libs/main/KoDocumentSectionView.cpp
M  +2    -0    libs/main/KoDocumentSectionView.h

http://commits.kde.org/calligra/9d454800f23b9fb5436a0380a7294a8e447a35a5