Fixed a cross-Krita instance Drag&Drop to the Layer Box

This patch effectively workarounds some bug in Qt that causes
mouse events come to the tree view while something is dragged over
the view (this, probably, happens due to the order of event filters).
These mouse events cause a new drag to start, which results is a very
weird behavior.

BUG:319334